# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  PULL_REQUEST_TEMPLATE  README.md  docker-compose.yaml  pylint.toml  pyproject.toml
.github/workflows/: build_and_test.yaml
python_boilerplate/: my_class.py
python_boilerplate/config/: config.py  default.toml  local.toml  production.toml
python_boilerplate/models/: __init__.py  app_config.py
scripts/: __init__.py  entrypoint.sh  run_all_tests.sh  run_mypy.sh  run_unit_tests.sh
server/: main.py  resources.py
server/routes/: hello.py
tests/: __init__.py
tests/python_boilerplate/: test_my_class.py
