[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "python_boilerplate" },
    { include = "server" },
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.4"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
black = "^24.1.1"
pytest-asyncio = "^0.23.4"
pytest = "<8"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.main]
ignore-paths = ["tests"]
ignore-patterns = ["^test_.*\\.py$"]

[tool.pylint.design]
max-line-length = 120

[tool.pylint."messages control"]
# Pylint can be overly noisy. If you want to disable some message types, you can do so here.
disable = [
    "too-few-public-methods",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
]
